--- a/members/templates/Channel/channel_customization.html
+++ b/members/templates/Channel/channel_customization.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,23 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.12/dist/cropper.min.css">
     <!-- Include Cropper.js library -->
    
-    
-
-
-
-    <script>
-        window.addEventListener('scroll', function() {
-          var navbar = document.querySelector('.navbar-testing');
-          var menuItems= document.querySelector('.menu-items');
-          if (window.scrollY > 0) {
-            navbar.classList.add('scrolled');
-            menuItems.classList.add('scrolled');
-          } else {
-            navbar.classList.remove('scrolled');
-            menuItems.classList.remove('scrolled');
-          }
-        });
-      </script>
+  
       <script>
         document.addEventListener("DOMContentLoaded", function() {
         var dropdown = document.getElementById("dropdown");
@@ -57,105 +42,131 @@
 
 </head>
    
-<header>
+<nav class="navbar-testing">
+  <div class="logo">
+    <a href="{% url 'home' %}"><img src="{% static 'Our-TubeLogo.svg' %}"></a>
+  </div> 
+  <ul class="navbar-nav">
 
-  <nav class="navbar-testing">
-    <div class="logo">
-      <a href="{% url 'home' %}"><img src="{% static 'Our-TubeLogo.svg' %}"></a>
-    </div> 
-    <ul class="navbar-nav">
-
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-       </div>
-       <div class="hudini">  <a href="{% url 'loda' %}" class="vinsmoke"><li>How it Works</li></a></div>
-       <div class="hudini">    <a href="{% url 'funding_now' %}" class="vinsmoke"><li><i class="fa fa-search"></i> Funding Now</li></a>  </div>  
-        <li></li>
-        <li></li>
-       <div class="hudini"><a href="{% url 'funding_info' %}"> <button class="donate-btn" style="color: azure; font-weight: bold;"> Start a Project</button></a></div>
-         {% if user.is_authenticated %}
-         <li>
-          <div class="dropdown">
-            {% if user.profile.cropped_image_data %}
-            <img src="{{ user.profile.cropped_image_data.url }}" alt="Button Image" id="dropdown" style="border-radius: 50%; align-self: center;">
-            <div class="dropdown-content" id="dropdown-content">
-              <a href="{% url 'user_channel' username=request.user.username %}">Your Channel</a>
-              <a href="{% url 'donation_history' %}">Your Donations</a>
-              <a href="{% url 'logout'%}">Log Out</a>
-            {% else %}
-            <img src="{% static 'profilepic.png' %}" alt="Button Image" id="dropdown" style="border-radius: 50%;">
-            <div class="dropdown-content" id="dropdown-content">
-              <a href="{% url 'user_channel' username=request.user.username %}">Your Channel</a>
-              <a href="{% url 'donation_history' %}">Your Donations</a>
-              <a href="{% url 'logout'%}">Log Out</a>
-            {% endif %}
-            </div>
+    <div class="menu-btn">
+      <i class="fas fa-bars"></i>
+    </div>
+     <div class="hudini">  <a href="{% url 'loda' %}" class="vinsmoke"><li>How it Works</li></a></div>
+     <div class="hudini">    <a href="{% url 'funding_now' %}" class="vinsmoke"><li><i class="fa fa-search"></i> Funding Now</li></a>  </div>  
+      <li></li>
+      <li></li>
+     <div class="hudini"><a href="{% url 'funding_info' %}"> <button class="donate-btn" style="color: azure; font-weight: bold;"> Start a Project</button></a></div>
+       {% if user.is_authenticated %}
+       <li>
+        <div class="dropdown">
+          {% if user.profile.cropped_image_data %}
+          <img src="{{ user.profile.cropped_image_data.url }}" alt="Button Image" id="dropdown" style="border-radius: 50%; align-self: center;">
+          <div class="dropdown-content" id="dropdown-content">
+            <a href="{% url 'user_channel' username=request.user.username %}">Your Channel</a>
+            <a href="{% url 'donation_history' %}">Your Donations</a>
+            <a href="{% url 'logout'%}">Log Out</a>
+          {% else %}
+          <img src="{% static 'profilepic.png' %}" alt="Button Image" id="dropdown" style="border-radius: 50%;">
+          <div class="dropdown-content" id="dropdown-content">
+            <a href="{% url 'user_channel' username=request.user.username %}">Your Channel</a>
+            <a href="{% url 'donation_history' %}">Your Donations</a>
+            <a href="{% url 'logout'%}">Log Out</a>
+          {% endif %}
           </div>
-       </li>
-         {% else %}
-         <a href="{% url 'login_user' %}" class="vinsmoke"><li>Login</li></a>
-         {% endif %}
-         
+        </div>
+     </li>
+       {% else %}
+       <a href="{% url 'login_user' %}" class="vinsmoke"><li>Login</li></a>
+       {% endif %}
+       
 
-     </ul>
+   </ul>
+
+   <div class="overlay" id="overlay">
+    <div class="close-btn">
+      <i class="fas fa-times fa-lg"></i>
+    </div>
+    <div class="menu">
+        <a href="{% url 'home' %}"><img src="{% static 'Our-TubeLogo.svg' %}" style="width: 150px; height:auto;"></a>
+      
+      <a href="{% url 'funding_now' %}" class="fuck" style="color: black;"> Discover <i class="fa fa-search" style="rotate: 90deg;"></i></a> 
+      <a href="{% url 'loda' %}" style="color: black;" class="fuck">How it Works<i class="fas fa-book" style="margin-left: 10px;"></i></a>
+      {% if user.is_authenticated %}
+      <a href="{% url 'logout'%}"  class="fuck" style="color: black;">Log Out</a>
+      {% else %}
+       <a href="{% url 'login_user' %}"  class="fuck" style="color: black;">Login <i class="fas fa-user" style="margin-left: 10px;"></i></a>
+       {% endif %}
+     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+    <a href="{% url 'funding_info' %}"> <button class="donate-btn-burger" style="color: azure; font-weight: bold;"> Start a Project</button></a>
+    {% if user.is_authenticated %}
+    <a href="{% url 'donation_history' %}"> <button class="sign-btn-burger">Donation History</button></a>
+    {% else %}
+    <a href="{% url 'register_user' %}"> <button class="sign-btn-burger">Sign up</button></a>
+    {% endif %}
+  </div> 
+    </div>
+  </div>
+</nav>
 </header>
 <body>
 
 
     <nav class="edit-bar">
         <ul class="throatgoat">
-            <h1 style="font-size: 2rem;">Customize your channel</h1>
-            <li class="gapfap"></li>
-            <a href="{% url 'user_channel' username=request.user.username %}">  <li class="litems"><button style="background-color: #ffffff; color: #1774e5; width: 130px; height: 40px; font-size: large; cursor: pointer; border: none;" >View channel</button></li></a>
-           <li></li>
+            <h1 class="escanor">Customize your channel</h1>
+            <a href="{% url 'user_channel' username=request.user.username %}" style="text-decoration: none;">  <li class="litems">View channel</li></a>
         </ul>
     </nav>
 
     
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  <div style="display: flex; flex-direction: column; max-width: 40vw; font-size: 0.9rem ;font-family: 'Roboto', sans-serif; color: gray; font-weight: 400; margin-left: 6%; position:absolute; top: 35vh;">
-    <h3 style="color: black;">Profile Picture</h3>
-    <p>Your profile picture will appear where your channel is presented on Our-Tube, like next to your projects or comments.</p>
+  <div class="inshah">
+    <h3 style="color: black; margin-bottom: 0;">Profile Picture</h3>
+    <p class="bigp">Your profile picture will appear where your channel is presented on Our-Tube, like next to your projects or comments. <strong>Choose file, Crop & Publish!</strong></p>
 
           <div style="display: flex; flex-direction: row; gap: 2vw;">
             <img id="preview-image" src="
             {% if user.profile.cropped_image_data %}
             {{ user.profile.cropped_image_data.url }}
               {% else %}
-              {% static 'profilepic.png' %}{% endif %}" style="   width: 150px;
-              height: 150px;
-              border-radius: 50%;"> 
+              {% static 'profilepic.png' %}{% endif %}" class="pfp"> 
                 <div style="display: flex; flex-direction: column">
-            <p style="align-self: flex-start;"> It is reccomended to use a picture that's at least 98 x 98 pixels and 4mb or less. Use a PNG or GIF (no animations) file. Make sure your picture follows
+            <p class="pewds"> It is reccomended to use a picture that's at least 98 x 98 pixels and 4mb or less. Use a PNG or GIF (no animations) file. Make sure your picture follows
             the Our-Tube community guidelines. </p>
             <form method="POST" enctype="multipart/form-data" action="{% url 'channel_customization' %}">{% csrf_token %}
-                <div style="display: flex; flex-direction: row; align-items: center;">
+                <div class="bignem">
                  
                   {{form.profile_pic}}
                   <input type="hidden" id="cropped-image-data" name="cropped_image_data">
-            <button type="submit" name="submit_profile_pic" style="background-color: #1774e5; border-radius: 4px; margin: 0;
-            border: none; color: #ffffff; width: 100px; height: 40px; align-items: center; cursor: pointer; font-size: medium;">PUBLISH</button>
+                  <button type="submit" name="submit_profile_pic" class="pubutton">PUBLISH</button>
                 </form>
+      
             </div>
+          
                  </div>
 
               
             </div>
          
   </div>
-          <form method="POST" action="{% url 'channel_customization' %}">{% csrf_token %}
-            <div style="position: absolute; top: 82vh; left: 6vw; display: flex; flex-direction: column; max-width: 42.5vw;">
-              <h3>Channel Bio</h3>
-              <p style="font-size: 0.9rem ;font-family: 'Roboto', sans-serif; color: gray;">Enter a description of your channel that can be up to 150 characters long. This will sit at the very top of your channel page next to your profile picture.</p>
-              <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;">  
-                    {{ form.bio }} 
-                    <button type="submit" name="submit_bio" style="background-color: #1774e5; border-radius: 4px; margin: 0;
-            border: none; color: #ffffff; width: 100px; height: 40px; align-items: center; cursor: pointer; font-size: medium; justify-content: space-between;">PUBLISH</button>
-                          </form>
-                        </div>
+        
+            <div class="inshah">
+              <h3 style="color: black; margin-bottom: 0;">Channel Bio</h3>
+             
+              <p class="bigp">Enter a description of your channel that can be up to 150 characters long. This will sit at the very top of your channel page next to your profile picture.</p>
+              <form method="POST" action="{% url 'channel_customization' %}">{% csrf_token %}  
+                <div style="display: flex; flex-direction: column; align-items: center; margin: auto; gap: 10px; margin:0 2%;">   
+                {{ form.bio }} 
+           
+              <button type="submit" name="submit_bio" class="pubutton">PUBLISH</button>
+            </div>
+          
+            </form>
+            </div>
+         
+                        
+                
            </div>
   
 
@@ -255,7 +266,21 @@
 </script>
 
 
-
+<script>
+  document.querySelector(".menu-btn").addEventListener("click", function () {
+    document.getElementById("overlay").style.display = "block";
+  });
+  
+  document.getElementById("overlay").addEventListener("click", function (event) {
+    if (event.target.classList.contains("overlay")) {
+      document.getElementById("overlay").style.display = "none";
+    }
+  });
+  
+  document.querySelector(".close-btn").addEventListener("click", function () {
+    document.getElementById("overlay").style.display = "none";
+  });
+  </script>
 
 </body>
 </html>
