--- a/members/templates/projects/payments.html
+++ b/members/templates/projects/payments.html
@@ -107,7 +107,7 @@
 <div class="ashaye">
     <div class="column">
       <h2 class="headingstyle">Contact Email</h2>
-      <p class="estyle">Confirm the email address we should use for correspondence about this project.</p>
+      <p class="estyle">Confirm the email address that will be used to receive payments via PayPal. It should correspond to either a personal or checking account with PayPal.</p>
       <p class="estyle">If the incorrect email is shown here, update it on your account.</p>
     </div>
     {% if project.verification_status == 'not_verified' %}
