--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -312,6 +312,9 @@ font-family: 'Roboto', sans-serif;
   transition: background-color 0.2s ease;
   margin: 0;
 }
+.subscribe-button:hover{
+  background-color: #004640;
+}
 
 .subscriibe-button:hover {
   background-color: #004640;
