--- a/members/templates/projects/verification.html
+++ b/members/templates/projects/verification.html
@@ -35,7 +35,7 @@
 
         <tr>
             <td align="center" valign="top" style="padding-top: 30px;">
-              <a href="{% url 'user_channel' username=username %}">  <img src="https://i.imgur.com/S4dg5fl.png" alt="Company Logo" style="width: 170px; height: auto;;"> </a>
+              <a href="{% url 'home' %}">  <img src="https://i.imgur.com/S4dg5fl.png" alt="Company Logo" style="width: 170px; height: auto;;"> </a>
 
             </td>
         </tr>
