--- a/members/templates/authenticate/login.html
+++ b/members/templates/authenticate/login.html
@@ -54,7 +54,7 @@
         <form method="post" action="">
             {% csrf_token %}
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Username</label>
+          <label for="exampleInputEmail1" class="form-label">Username or Email</label>
           <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
@@ -83,7 +83,7 @@
   <form method="post" action="">
     {% csrf_token %}
 <div class="mb-3">
-  <label for="exampleInputEmail1" class="form-label">Username</label>
+  <label for="exampleInputEmail1" class="form-label">Username or Email</label>
   <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
 </div>
 <div class="mb-3">
