--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -655,8 +655,8 @@ $(document).ready(function() {
                     </div>
                   <hr style="width: 100%;">
                   <div style="display: flex; flex-direction: row ; gap: 20px; align-items: center; margin: 0;">
-                    <a href="https://twitter.com/share?url={{request.build_absolute_uri}}&text={{project.project_title}}&img={{project.project_thumbnail.url}}" style="text-decoration: none;" target="_blank"> <i class="fab fa-twitter fa-xl" style="color: #1DA1F2; cursor: pointer;"></i></a>
-                    <a href="https://twitter.com/share?url={{request.build_absolute_uri}}&text={{project.project_title}}&img={{project.project_thumbnail.url}}" style="text-decoration: none; color: black;" target="_blank"><p style="margin: 0.5em; font-size: 0.8rem;">Twitter</p></a>
+                    <a href="https://twitter.com/share?url={{ request.build_absolute_uri | urlencode }}&text={{ project.project_title | urlencode }}" style="text-decoration: none;" target="_blank"> <i class="fab fa-twitter fa-xl" style="color: #1DA1F2; cursor: pointer;"></i></a>
+                    <a href="https://twitter.com/share?url={{ request.build_absolute_uri | urlencode }}&text={{ project.project_title | urlencode }}" style="text-decoration: none; color: black;" target="_blank"><p style="margin: 0.5em; font-size: 0.8rem;">Twitter</p></a>
                     </div>
                     <hr style="width: 100%;">
                     <div style="display: flex; flex-direction: row ; gap: 20px; align-items: center; margin: 0;">
@@ -1011,7 +1011,7 @@ $(document).ready(function() {
             <div style="display: flex; flex-direction: row; justify-content: space-around; align-items: center;">
              <a href="https://www.facebook.com/sharer.php?u={{request.build_absolute_uri}}" style="text-decoration: none;" target="_blank"> <i class="fab fa-facebook fa-2xl" style="color: #1877F2; cursor: pointer;"></i></a>
              <a href="instagram-stories://camera" target="_blank" style="text-decoration: none;"> <i class="fab fa-instagram fa-2xl" style="color: #C13584; cursor: pointer;"></i></a>
-             <a href="https://twitter.com/share?url={{request.build_absolute_uri}}&text={{project.project_title}}&img={{project.project_thumbnail.url}}" style="text-decoration: none;" target="_blank"> <i class="fab fa-twitter fa-2xl" style="color: #1DA1F2; cursor: pointer;"></i></a>
+             <a href="https://twitter.com/share?url={{request.build_absolute_uri}}&text={{project.project_title}}" style="text-decoration: none;" target="_blank"> <i class="fab fa-twitter fa-2xl" style="color: #1DA1F2; cursor: pointer;"></i></a>
              <a href="https://api.whatsapp.com/send?text={{project.project_title}} {{request.build_absolute_uri}}" style="text-decoration: none;" target="_blank"><i class="fab fa-whatsapp fa-2xl" style="color: #25D366; cursor: pointer;"></i></a>
              <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ request.build_absolute_uri }}" target="_blank"><i class="fab fa-linkedin fa-2xl" style="color: #0077B5;"></i></a>
           </div>
